--- a/episodes/section2.Rmd
+++ b/episodes/section2.Rmd
@@ -199,7 +199,7 @@ ifnb.filtered$SingleR.labels <- ifelse(lbls.keep[pred.cnts$labels], pred.cnts$la
 
 # Run UMAP (based on PCA)
 ifnb.filtered <- RunUMAP(ifnb.filtered, dims = 1:20)
-DimPlot(ifnb.filtered, reduction='umap', group.by='SingleR.labels')
+DimPlot(ifnb.filtered, reduction='umap.cca', group.by='SingleR.labels',  label = TRUE, label.size = 3 )
 
 ```
 
