--- a/episodes/introduction.Rmd
+++ b/episodes/introduction.Rmd
@@ -9,9 +9,9 @@ exercises: 2
 [**Slides available here.**](files/Seurate-DE-slides-NEW.pdf)
 
 **Author:** Manveer Chauhan, Clark Lab, The University of Melbourne.\
-**Contributors:** Vini Salazar, Susan (Jiayi) Si, Raymond (Bibo) Zhao, Melbourne Bioinformatics.
+**Contributors:** Vini Salazar, Susan (Jiayi) Si, Raymond (Bibo) Zhao, Emma Gail, Melbourne Bioinformatics.
 
-Last updated October 2024.
+Last updated November 2025
 
 ## Overview 
 
